Added some more content slides to the presentation, removed most examples, cleanup

--- a/gradle-presentation/beamerthemesthlm.sty
+++ b/gradle-presentation/beamerthemesthlm.sty
@@ -127,7 +127,7 @@
     \vspace*{5mm}
     {\usebeamerfont{institute}\usebeamercolor[fg]{institute}\insertinstitute\par}%
     \fi%
- 	\hfill \includegraphics[width=0.3\textwidth]{logo}  \par
+ 	\hfill \includegraphics[width=0.3\textwidth]{pics/logo}  \par
 	\vspace*{5mm}
     \vfill
   \end{minipage}
