--- a/gradle-presentation/lsd_gradle_presentation_hefner_jando_kohler.tex
+++ b/gradle-presentation/lsd_gradle_presentation_hefner_jando_kohler.tex
@@ -42,6 +42,20 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.14}
 \usepackage{cancel}
+\usepackage[ngerman]{babel}
+
+\usepackage{xcolor}
+% Definition eigener Farbwerte
+\definecolor{maroon}{rgb}{0.5,0,0}
+\definecolor{darkgreen}{rgb}{0,0.5,0}
+\definecolor{darkpurple}{HTML}{9900FF}
+
+\usepackage{listings}
+\include{listing_settings}
+
+% Deutsche Anführungszeichen
+\usepackage[autostyle=true,german=quotes]{csquotes}
+
 
 %-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 %
@@ -51,9 +65,9 @@
 
 \title{Gradle - Yet another Build-Tool?!}
 \subtitle{Vortrag im Rahmen von \\ Large-Scale Development (LSD)}
-\date{\today}
+\date{\today{}}
 \author{\texttt{Felix Hefner, Max Jando \& Severin Kohler}}
-\institute{Hochschule Mannheim, WS 2017}
+\institute{Hochschule Mannheim, WS 2017/18}
 
 \hypersetup{
 pdfauthor = {Felix Hefner: mail@felixhefner.de},
@@ -81,211 +95,187 @@ pdfcreator = {}
 %-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
 \section*{Agenda}
+
 \begin{frame}{Agenda}
-% For longer presentations use hideallsubsections option
 \tableofcontents[hideallsubsections]
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%
-%	TABLE OF CONTENTS: OVERVIEW
-%
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
 \section{Was ist Gradle?}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+\begin{frame}{Gradle?!}
 
-\begin{frame}[c]{Gradle?!}
+Laut \alert{man gradle}:
 
-\pause
-
-Ausgabe des Befehls \alert{man gradle} im Terminal:
+\lstinputlisting[language=bash,caption={Linux Man-Page für \texttt{gradle}}]{listings/gradle_man.txt}
 
 \end{frame}
 
+\begin{frame}{Gradle?! - Neuer Versuch}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+Wenn man Gradle selbst um Hilfe bittet:
 
-\begin{frame}[c]{sthlm Theme Information}
-	
-\alert{sthlm} continues to be a theme that can easily be modified through the style files.  If you are looking for a packaged theme, then I highly recommend \alert{mTheme}.\\
-
-\vspace{1em}
-
-I use a custom version of \alert{sthlm} for daily decks and make a vanilla version of the theme available for others to use and modify. - Enjoy!
+\lstinputlisting[language=bash,caption={Ausschnitt aus der Ausgabe von \texttt{gradle --help}}]{listings/gradle_help.txt}
 
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c]{sthml Build Information}
-\cRed{sthlm} theme has been designed and tested to work within the SageMathCloud (Linux) environment.\\
-
-\vspace{1em}
-
-\begin{alertblock}{Warning of Build Issues}
-I cannot guarantee that the code used to create the sthlm theme is \emph{error free}, \emph{optimized}, \emph{well written} nor \emph{if it will work in your production environment}.
-\end{alertblock}
-
-
+\begin{frame}{Ein paar Buzzwords}
+\begin{columns}
+	\begin{column}{.48\linewidth}
+		\begin{itemize}
+			\item \emph{Task}
+			\item \emph{Build}
+			\item \emph{Project}
+			\item \emph{Dependencies}
+		\end{itemize}
+	\end{column}
+	\begin{column}{.48\linewidth}
+		\begin{itemize}
+			\item \emph{Build File}
+			\item \emph{Settings File}
+			\item \emph{JVM}
+			\item \emph{Daemon}
+		\end{itemize}
+	\end{column}
+\end{columns}
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c]{Have Fun!}
-If you have read this far, then you are probably interested in using / modifying this theme for your own project. \\
-\vspace{1em}
-Everything you need is in the
-
-\begin{itemize}
-	\item style files:
+\begin{frame}{Allgemeines}
 	\begin{itemize}
-		\item \texttt{beamerthemesthlm.\cBlue{sty}},
-		\item \texttt{beamerfontthemesthlm.\cBlue{sty}},
-		\item \texttt{beamercolorthemesthlm.\cBlue{sty}}.
+		\item Build-Tool zum automatisierten Bauen und Testen von Quellcode
+		\item Basierend auf Groovy, läuft in der JVM\footnote{Java Virtual Machine}
+		\item Erster Release 2007, Version 1.0 im Juni 2012
+		\item Aktuelle Version: \textbf{4.3.1}
+		\item Lizenz: Apache 2.0 (Open-Source) 
+		\item Für alle gängigen Plattformen verfügbar
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Konzepte}
+\begin{itemize}
+	\item Build-Files in Groovy-basierender DSL\footnote{Domain-Specific Language}
+		\begin{itemize}
+			\item Objektorientierung möglich
+			\item Komplexe Funktionen/Berechnungen realisierbar
+			\item Dank eigener Keywords muss jedoch kein Groovy gelernt werden
+		\end{itemize}
+	\item Kombination aus Konzepten von \alert{Apache Ant} und \alert{Apache Maven}:
+		\begin{enumerate}
+			\item Simplizität von Maven (\emph{\enquote{Convention over Configuration}})
+			\item Flexibilität von Ant
+		\end{enumerate}
+	\item Simples Bauen von Projekten, die aus mehreren (verschieden-artigen) Teil-Projekten zusammengesetzt sind
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Anwendung}
+\begin{itemize}
+	\item Standard-Buildtool für Groovy
+	\item Seit Android SDK 23 für Android Apps
+	\item Mittlerweile von vielen bekannten Frameworks benutzt:
+	\begin{itemize}
+		\item Grails
+		\item Hibernate
+		\item Spring (insbesondere Spring Security)
 	\end{itemize}
 \end{itemize}
-
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: WHERE TO GET
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c]{Get it on GitHub}
-This theme and all the documentation is hosted on GitHub \\
-\vspace{1em}
-\begin{center}
-\large{Download, Fork, Contribute}
-
-\cBlue{\url{https://goo.gl/0Wg6xt}}
-\vspace{1em}
-
-\end{center}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Thank You Overleaf
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{frametitle}{bg=\cnGreen}
-\setbeamercolor{normal text}{fg=\cnDarkGrey,bg=\cnLightGreen}
-\begin{frame}{Thank You Overleaf}
-
-Special thank you to \cGreen{Overleaf} - especially \cGreen{Dr. Lian Tze Lim} for supporting those using the theme on Overleaf. Awesome work!
-
-\vspace{1em}
-
-You can view and download the theme from \cGreen{Overleaf}.
-
-\begin{center}
-	\cBlue{\url{https://goo.gl/Z5zrsF}}
-\end{center}
-
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Theme Package Requirements}
-
-This theme requires that the following packages are installed:
-
-\begin{columns}[t]
-\begin{column}{0.5\textwidth}
+\begin{frame}{Sprachen-Unterstützung}
+Gradle unterstützt direkt...
 \begin{itemize}
-\item \emph{beamer}
-\item \emph{backgrounds}
-\item \emph{booktabs}
-\item \emph{calc}
+	\item Java
+	\item Groovy
+	\item Scala
+	\item Antlr\footnote{\emph{ANother Tool for Language Recognition}, Sprache zur Parser-Erzeugung}
 \end{itemize}
-\end{column}
-
-\begin{column}{0.5\textwidth}
-\begin{itemize}
-\item \emph{datetime}
-\item \emph{ragged2e}
-\item \emph{tikz}
-\end{itemize}
-\end{column}
-\end{columns}
-\vspace{1cm}
-There is always the option of simplifying the theme to reduce the number of required packages. 
-
+Weitere Sprachen wie \emph{Assembler}, \emph{C}, \emph{C++} und \emph{Objective-C} können durch Plugins hinzugefügt werden
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+\begin{frame}{Tasks}
+\vfill
+\begin{quotation}
+	A Task represents a single atomic piece of work for a build, such as compiling classes or generating javadoc. \\ - \centering \textbf{Gradle Devs}
+\end{quotation}
+\pause
 
-\begin{frame}{Replace the Logo With Your Own}
+\begin{itemize}
+	\item Element eines Gradle - Projekts
+	\item Besteht aus einer Folge von Aktionen
+	\item Besitzt einen Namen und einen Typ
+	\item Kann von anderen Tasks abhängig sein
+\end{itemize}
+\end{frame}
 
+\begin{frame}{Tasks - Ein Beispiel}
+\lstinputlisting[language=Groovy,caption={Definition von 2 Tasks in einem \texttt{.gradle}-File}]{listings/simple_tasks.gradle}
+\end{frame}
+
+\begin{frame}{Tasks- Abhängigkeiten}
+\vfill
 \begin{figure}
-	\centerline{\includegraphics[width=0.3\textwidth]{pics/hs_mannheim_logo}}
-\caption{SSHL Logo}
+	\centering
+	\includegraphics[width=0.9\textwidth]{pics/task_dependencies}
+	\caption{Abhängigkeiten zwischen typischen Gradle-Tasks}
+	
 \end{figure}
-
+\vfill
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Theme Options
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+\begin{frame}{Wichtige Funktionen des CLI-Tools}
+	\begin{columns}
+		\begin{column}{0.48\textwidth}
+			\begin{itemize}
+				\item \texttt{gradle <task(s)>}: Ausführen des/der Tasks (und Abhängigkeiten)
+				\item \texttt{gradle <t\_1> \textbf{-x} <t\_2>}: Ausschluss von t\_2 
+				\item \texttt{gradle --continue}: \\ Build fortsetzen, auch wenn Tasks nicht erfolgreich
+			\end{itemize}
+		\end{column}
+		\begin{column}{0.48\textwidth}
+			\begin{itemize}
+				\item \texttt{gradle --rerun-tasks}: Gradle zwingen, bereits durchgeführte Tasks nochmals zu bearbeiten
+				\item \texttt{gradle -q <query\_task>}: Gibt Build-Informationen zum angegebenen Task:
+				\begin{itemize}
+					\item \textbf{tasks:} Zeigt Tasks und Beschreibung
+					\item \textbf{projects:} Zeigt Sub-Projekte
+			%		\item \textbf{dependencies:} Zeigt Herkunft und Version der Abhängigkeiten
+				\end{itemize}
+			\end{itemize}
+		\end{column}
+	\end{columns}
+	
+\end{frame}
 
-\begin{frame}{Theme Options}
+\begin{frame}{Gradle vs. Maven}
 \begin{table}[]
-	\begin{tabularx}{\linewidth}{l>{\raggedright}X}
+	\begin{tabularx}{\linewidth}{l || X X}
 		\toprule
-		\textbf{Option}			& \textbf{Description} \tabularnewline
+		\textbf{Eigenschaft} & \textbf{Maven} & \textbf{Gradle} \\
 		\midrule
-		\texttt{\cBlue{newPxFont}} & newpxtext and newpxtext fonts will be used (pdfLaTeX) \tabularnewline
-		\texttt{\cBlue{progressbar}} & Frame Title progress bar \tabularnewline
-		\texttt{\cBlue{sectionpages}} & Section pages \tabularnewline
-		\texttt{\cBlue{fullfooter}} & Footers with logo\tabularnewline
-		\texttt{\cBlue{numfoooter}} & Footers with page number only \tabularnewline
-		\texttt{\cBlue{greybg}} & Frame background default is set to grey \tabularnewline
-		\texttt{\cBlue{cblock}} & Blocks with colored background \tabularnewline
-		\texttt{\cBlue{protectFrameTitle}} & Protect the frame title (if needed) \tabularnewline
-		\texttt{\cBlue{valigncolumns}} & Vertically align columns\tabularnewline
+		\cBlue{Build-Config} & \texttt{pom.xml} & \texttt{build.gradle},\newline \texttt{settings.gradle} \& \newline \texttt{gradle.properties} \\
+		\cBlue{Sprache} & XML & Groovy/DSL \\
 		\bottomrule
 	\end{tabularx}
-	\label{tab:options}
+	\label{tab:maven_gradle_vergleich}
 \end{table}
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%
-%	SECTION: COLORS
-%
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\section{Colors}
+\section{Build- und Config-Files}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c]{Color Style File}
-	
-The sthlm theme style file \texttt{beamerthemesthlm.sty} references the \texttt{beamercolorthemesthlm.sty} file for the theme colors automatically. \\
-\vspace{1em}
-If you wish to bring your own color theme, then you will have to either change the reference in the \texttt{beamerthemesthlm.sty} file or rename your style file to \texttt{beamercolorthemesthlm.sty}.
-
+\begin{frame}{build.gradle}
+TODO: Standard-Aufbau erklären...
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+\begin{frame}{settings.gradle}
+TODO: Standard-Aufbau erklären...
+\end{frame}
+
+\begin{frame}{gradle.properties}
+TODO: Standard-Aufbau erklären...
+\end{frame}
+
+\section{Plugins}
+
+\section{Umstieg auf Gradle}
 
 \begin{frame}[c]{Primary Presentation Colors}
 
@@ -438,9 +428,6 @@ If you wish to bring your own color theme, then you will have to either change t
 \end{table}
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 \begingroup
 \setbeamercolor{background canvas}{bg=\cnGreen}
 \begin{frame}{Frame Colored Backgrounds}
@@ -450,588 +437,21 @@ If you wish to bring your own color theme, then you will have to either change t
 \end{frame}
 \endgroup
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnLightGreen}
-\begin{frame}{Frame Colored Backgrounds}
-
-
-\centering{\Huge{Light Green Background}}
-
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Theme Package Requirements
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{frametitle}{bg=\cnGreen}
-\begin{frame}[plain]{Colored Title Block}
-
-\centering{\Huge{Great for examples}}
-
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnBlue}
-\begin{frame}{Frame Colored Backgrounds}
-
-\centering{\cGrey{\Huge{Blue Background}}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnLightBlue}
-\begin{frame}{Frame Colored Backgrounds}
-
-\centering{\Huge{Light Blue Background}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Theme Package Requirements
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{frametitle}{bg=\cnBlue}
-\begin{frame}[plain]{Colored Title Block}
-
-\centering{\Huge{Great for definitions}}
-
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnRed}
-\begin{frame}{Frame Colored Backgrounds}
-
-\centering{\cGrey{\Huge{Red Background}}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnLightRed}
-\begin{frame}{Frame Colored Backgrounds}
-
-\centering{\Huge{Light Red Background}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Theme Package Requirements
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{frametitle}{bg=\cnRed}
-\begin{frame}[plain]{Colored Title Block}
-
-\centering{\Huge{Great for alerts}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnPurple}
-\begin{frame}{Frame Colored Backgrounds}
-
-\centering{\cGrey{\Huge{Purple Background}}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnLightPurple}
-\begin{frame}{Frame Colored Backgrounds}
-
-\centering{\Huge{Light Purple Background}}
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Theme Package Requirements
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{frametitle}{bg=\cnPurple}
-\begin{frame}[plain]{Colored Title Block}
-
-\centering{\Huge{Great for Proofs}}
-
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{frametitle}{bg=white, fg=\cnBlue}
-\begin{frame}{Simple Frames}
-
-\centering{\Huge{Keeping it Simple}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnLightBlue}
-\begin{frame}[plain]
-
-\centering{\Huge{Plain Frame}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\begingroup
-\setbeamercolor{background canvas}{bg=\cnDarkGrey}
-\begin{frame}[plain]
-
-\centering{\cGrey{\Huge{Plain Frame}}}
-
-\end{frame}
-\endgroup
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	SECTION: Blocks
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\section{Blocks}\label{Blocks}
-
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Blocks
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Blocks}
-
-\begin{block}{Block Title Here}
-		Great for definitions
-\end{block}
-
-\begin{alertblock}{Alert Title Here}
-		Great for definitions
-\end{alertblock}
-
-\begin{exampleblock}{Example Title Here}
-		Great for examples
-\end{exampleblock}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Blocks
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Blocks}
-
-\begin{block}{Block Title Here}
+\begin{frame}{Quellen}
 	\begin{itemize}
-		\item point 1
-		\item point 2
+		\item \href{https://gradle.org/docs/}{Gradle.org/docs}
+		\item \href{https://de.wikipedia.org/wiki/Gradle}{de.wikipedia.org: Gradle}
+		
 	\end{itemize}
-\end{block}
-
-\begingroup
-\setbeamercolor{block title}{fg=white, bg=\cnBlue}
-\setbeamercolor{block body}{bg=\cnLightBlue}
-\begin{block}{Blue Colored Blocks}
-	Produced by using the \texttt{cblock} theme option
-\end{block}
-\endgroup
 \end{frame}
 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Additional Blocks
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Additional Blocks}
-\begin{alertblock}{Alert Block}
-	Highlight important information.
-\end{alertblock}
-
-\begingroup
-\setbeamercolor{block title}{fg=white, bg=\cnRed}
-\setbeamercolor{block body}{bg=\cnLightRed}
-\begin{block}{Red Colored Blocks}
-	Produced by using the \texttt{cblock} theme option
-\end{block}
-\endgroup
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Additional Blocks
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Additional Blocks}
-
-\begin{exampleblock}{Example Block}
-	Examples can be good.
-\end{exampleblock}
-
-\begingroup
-\setbeamercolor{block title}{fg=white, bg=\cnGreen}
-\setbeamercolor{block body}{bg=\cnLightGreen}
-\begin{block}{Green Colored Blocks}
-	Produced by using the \texttt{cblock} theme option
-\end{block}
-\endgroup
-
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Blocks
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Custom Blocks}
-\begingroup
-\setbeamercolor{block title}{fg=white, bg=\cnPurple}
-\setbeamercolor{block body}{bg=\cnLightPurple}
-\begin{block}{Purple customization}
-	Using the theme colors to generate colored blocks.
-\end{block}
-\endgroup
-
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%
-%	SECTION: FONTS
-%
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\section{Fonts}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c]{No Special Fonts Required}
-
-This theme was originally made to work with \texttt{pdflatex} and the default latex fonts.\\
-\vspace{1em}
-\cRed{sthlm} does comes with a \texttt{pdflatex} font option, \cRed{newPxFont}, which loads the following fonts:
-
-\begin{itemize}
-	\item \emph{newpxtext} for text
-	\item \emph{cantarell} for sans-serif
-	\item \emph{inconsolata} for sans-serif monospaced
-	\item \emph{newpxmath} for math
-\end{itemize}
-
-Please refer to the \texttt{beamerfontthememsthlm.sty} for the package requirements.
-
-\end{frame}
-
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%
-%	SECTION: ADDITIONAL FEATURES
-%
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-\section{Features}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Tables
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Tables}
-\begin{table}[]
-	\caption{Selection of window function and their properties}
-	\begin{tabular}[]{lrrr}
-		\toprule
-		\textbf{Window}			& \multicolumn{1}{c}{\textbf{First side lobe}}
-		                    & \multicolumn{1}{c}{\textbf{3\,dB bandwidth}}
-		                    & \multicolumn{1}{c}{\textbf{Roll-off}} \\
-		\midrule
-		Rectangular				& 13.2\,dB	& 0.886\,Hz/bin	& 6\,dB/oct		\\[0.25em]
-		Triangular				& 26.4\,dB	& 1.276\,Hz/bin	& 12\,dB/oct	\\[0.25em]
-		Hann					& 31.0\,dB	& 1.442\,Hz/bin	& 18\,dB/oct	\\[0.25em]
-		Hamming					& 41.0\,dB	& 1.300\,Hz/bin	& 6\,dB/oct		\\
-		\bottomrule
-	\end{tabular}
-	\label{tab:WindowFunctions}
-\end{table}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c]{Mathematics Step by Step}
-Show $[x^n]'=nx^{n-1}$ by using first principles.
-\begin{align*}
-\visible<+->{f'(x) & = \displaystyle \lim_{\Delta x \to 0} \frac{f(x+\Delta x)-f(x)}{\Delta x} \\}
-\visible<+->{&= \displaystyle \lim_{\Delta x \to 0} \frac{(\cRed{x+\Delta x})^n - (\cRed{x})^n}{\Delta x}\\}
-\visible<+->{&= \displaystyle \lim_{\Delta x \to 0} \frac{\binom{n}{0}x^n\Delta x^0 +\binom{n}{1}x^{n-1}\Delta x^1 + \cdots + \binom{n}{n}x^0\Delta x^n - \cRed{x^n} }{\Delta x}\\}
-\visible<+->{&= \displaystyle \lim_{\Delta x \to 0} \frac{\cRed{1}x^n(\cRed{1}) +\cRed{n}x^{n-1}\Delta x^1 + \cdots + \cRed{1}(\cRed{1})\Delta x^n - \cRed{x^n} }{\Delta x}\\}
-\visible<+->{&= \displaystyle \lim_{\Delta x \to 0} \frac{\cRed{x^n} +nx^{n-1}\Delta x + \cdots + \Delta x^n - \cRed{x^n} }{\Delta x}\\}
-\visible<+->{&= \displaystyle \lim_{\Delta x \to 0} \frac{\cancel{\cRed{\Delta x}} (nx^{n-1} + \cdots + \Delta x^{n-1} ) }{\cancel{\Delta x}}\\}
-\visible<+->{&=nx^{n-1}}
-\end{align*}
-
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Formulas
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Functions}
-\begin{block}{Gaussian Probability Density Function}
-\[
-f \left(x \mid \mu, \sigma^2 \right) = \dfrac{1}{\sqrt{2 \sigma^2 \pi}} e^{- \dfrac{(x-\mu)^2}{2\sigma^2}}
-\]
-\end{block}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: 
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c]{More Mathematics}
-
-\begin{columns}[c]
-\begin{column}{0.5\textwidth}
-\begin{tikzpicture}[scale=0.7]
-	\begin{axis}[
-            domain=0:2, range=0:6,ymax=6,ymin=0,
-            axis lines =left,
-            every axis y label/.style={at=(current axis.above origin),anchor=south},
-            every axis x label/.style={at=(current axis.right of origin),anchor=west},
-            xtick={1,1.666}, ytick={1,3},
-            xticklabels={$\cPurple{x}$,$\cPurple{x}+\cRed{\Delta x}$}, yticklabels={$f(\cPurple{x})$,$f(\cPurple{x}+\cRed{\Delta x})$},
-            axis on top,
-          ]
-          \addplot [very thick,\cnRed, domain=(0:2)] {-1.994+2.994*x};S
-	  	  \addplot [\cnDarkGrey,dashed] plot coordinates {(1,0) (1,1)};
-          \addplot [\cnDarkGrey,dashed] plot coordinates {(0,1) (1,1)};
-          \addplot [\cnDarkGrey,dashed] plot coordinates {(0,3) (1.666,3)};
-          \addplot [\cnDarkGrey,dashed] plot coordinates {(1.666,0) (1.666,3)};
-          \addplot [very thick,\cnBlue, smooth,domain=(0:1.833)] {-1/(x-2)};
-          \addplot[color=\cnDarkGrey,fill=\cnDarkGrey,only marks,mark=*] coordinates{(1.666,3)};  %% closed hole
-          \addplot[color=\cnDarkGrey,fill=\cnDarkGrey,only marks,mark=*] coordinates{(1,1)};  %% closed hole
-        \end{axis}
-\end{tikzpicture}
-\end{column}
-
-\begin{column}{0.5\textwidth}
-\begin{align*}
-m &= \frac{\Delta y}{\Delta x}	\\
-\\
-m & =  \frac{\visible<2->{f(\cPurple{x}+\cRed{\Delta x})}\visible<3->{-}\visible<4->{f(\cPurple{x})}}{\visible<5->{\cPurple{x}+\cRed{\Delta x}}\visible<6->{-}\visible<7->{\cPurple{x}}}\\
-m  &=  \underbrace{\frac{\visible<8->{f(\cPurple{x}+\cRed{\Delta x})-f(\cPurple{x})}}{\visible<9->{\cRed{\Delta x}}}}_{\visible<10->{\text{\cRed{difference quotient}}}}
-\end{align*}
-\end{column}
-\end{columns}
-
-\visible<10->{The slope of the secant line }
-\begin{itemize}
-	\item<10-> can be found using the \cRed{difference quotient}
-	\item<11-> represents a \cBlue{function}'s \cRed{average} slope on the interval $[\cPurple{x}, \cRed{x+\Delta x}]$
-\end{itemize}
-
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}[c, fragile]{Fragile Frames Not a Problem}
-\begin{tikzpicture}
-	\begin{axis}[
-            domain=0:6, range=0:7,
-            ymin=-.2,ymax=7,
-            width=\textwidth,
-            height=7cm, %% Hard coded height! Moreover this effects the aspect ratio of the zoom--sort of BAD
-            axis lines=none,
-          ]
-          \only<3->{\addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(.8,1.6) (2.834,5)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(2.834,5) (4.166,5)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(1.2,1.6) (4.166,5)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(.8,1.6) (1.2,1.6)} \closedcycle; %% zoom fill
-		  }
-          \only<4->{\addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(3.3,3.6) (5.334,5)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(5.334,5) (6.666,5)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(3.7,3.6) (6.666,5)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(3.3,3.6) (3.7,3.6)} \closedcycle; %% zoom fill
-  }
-          \only<4->{\addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(3.7,2.4) (6.666,1)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(3.3,2.4) (3.7,2.4)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(3.3,2.4) (5.334,1)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(5.334,1) (6.666,1)} \closedcycle; %% zoom fill
- }
-
-          \only<3->{\addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(.8,.4) (2.834,1)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=\cnDarkGrey!10!\cnGrey] plot coordinates {(2.834,1) (4.166,1)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(1.2,.4) (4.166,1)} \closedcycle; %% zoom fill
-          \addplot [draw=none, fill=white] plot coordinates {(.8,.4) (1.2,.4)} \closedcycle; %% zoom fill
-}
-          \addplot[very thick,\cnRed, smooth,domain=(0:1.833)] {-1/(x-2)};
-          \only<3->{\addplot[very thick,\cnRed, smooth,domain=(2.834:4.166)] {3.333/(2.050-.3*x)-0.333}; %% 2.5 to 4.333
-          %\addplot[very thick,\cnRed, smooth,domain=(5.334:6.666)] {11.11/(1.540-.09*x)-8.109}; %% 5 to 6.833
-          \only<4->\addplot[very thick,\cnRed, smooth,domain=(5.334:6.666)] {x-3}; %% 5 to 6.833
- }
-         \only<2->{ \addplot[color=\cnRed,fill=\cnRed,only marks,mark=*] coordinates{(1,1)};}  %% point to be zoomed
-          \only<3->{\addplot[color=\cnRed,fill=\cnRed,only marks,mark=*] coordinates{(3.5,3)}; } %% zoomed pt 1
-          \only<4->{\addplot[color=\cnRed,fill=\cnRed,only marks,mark=*] coordinates{(6,3)}; } %% zoomed pt 2
-
-          \addplot [->,\cnDarkGrey] plot coordinates {(0,0) (0,6)}; %% axis
-          \addplot [->,\cnDarkGrey] plot coordinates {(0,0) (2,0)}; %% axis
-
-          \only<2->{\addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(.8,.4) (.8,1.6)}; %% box around pt
-          \addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(1.2,.4) (1.2,1.6)}; %% box around pt
-          \addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(.8,1.6) (1.2,1.6)}; %% box around pt
-          \addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(.8,.4) (1.2,.4)}; %% box around pt
- }
-          \only<3->{\addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(2.834,1) (2.834,5)}; %% zoomed box 1
-          \addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(4.166,1) (4.166,5)}; %% zoomed box 1
-          \addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(2.834,1) (4.166,1)}; %% zoomed box 1
-          \addplot [\cnDarkGrey!50!\cnGrey] plot coordinates {(2.834,5) (4.166,5)}; %% zoomed box 1
-}
-          \only<4->{\addplot [\cnDarkGrey] plot coordinates {(3.3,2.4) (3.3,3.6)}; %% box around zoomed pt
-          \addplot [\cnDarkGrey] plot coordinates {(3.7,2.4) (3.7,3.6)}; %% box around zoomed pt
-          \addplot [\cnDarkGrey] plot coordinates {(3.3,3.6) (3.7,3.6)}; %% box around zoomed pt
-          \addplot [\cnDarkGrey] plot coordinates {(3.3,2.4) (3.7,2.4)}; %% box around zoomed pt
-}
-          \only<4->{\addplot [\cnDarkGrey] plot coordinates {(5.334,1) (5.334,5)}; %% zoomed box 2
-          \addplot [\cnDarkGrey] plot coordinates {(6.666,1) (6.666,5)}; %% zoomed box 2
-          \addplot [\cnDarkGrey] plot coordinates {(5.334,1) (6.666,1)}; %% zoomed box 2
-          \addplot [\cnDarkGrey] plot coordinates {(5.334,5) (6.666,5)}; %% zoomed box 2
-}
-          \node at (axis cs:2.4,0) [anchor=east] {$x$};
-          \node at (axis cs:0,6.9) [anchor=north] {$y$};
-        \end{axis}
-\end{tikzpicture}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: PGFPlots
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{PGFPlots Example}
-	\begin{figure}[h]
-		\centering
-		\begin{tikzpicture}
-		\begin{axis}[
-		    ybar,
-		    enlarge x limits=0.15,
-		    legend style={at={(-.5,0.5)},
-		      anchor=north,legend columns=1},
-		    ylabel={\% students},
-		    symbolic x coords={A, B, C, D, E, F, DNF},
-		    xtick=data,
-		     bar width=2mm,
-		     width=0.7\textwidth
-		    ]
-		    \legend{2012, 2013};
-		    % Spring 2012 results
-			\addplot[fill=\cnGrey]  coordinates {(A,0) (B,0) (C,3.85) (D,23.07) (E,43.31) (F,30.77) (DNF,0.00)};
-			% Spring 2013 results
-			\addplot[fill=\cnBlue]   coordinates {(A,0) (B,3.70) (C,22.22) (D,22.22) (E,40.74) (F,3.70) (DNF,7.41)};
-		\end{axis}
-		\end{tikzpicture}
-		\caption{Consistent improvement over the last year}
-		\end{figure}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME: Multiple Columns
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{Multiple Columns}
-\begin{columns}
-\begin{column}{.48\linewidth}
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-\end{column}
-\begin{column}{.48\linewidth}
-		\begin{itemize}
-        	\item Point 1
-			\begin{itemize}
-				\item Sub point a
-				\item Sub point b
-			\end{itemize}
-        	\item Point 2
-		\end{itemize}
-	\end{column}
-	\end{columns}
-\end{frame}
-
-\begin{frame}{References}
-	\begin{thebibliography}{10}
-
-	\beamertemplatebookbibitems
-	\bibitem{Oppenheim2009}
-	Alan V. Oppenheim
-	\newblock Discrete - Time Signal Processing
-	\newblock Prentice Hall Press, 2009
-
-	\beamertemplatearticlebibitems
-	\bibitem{EBU2011}
-	European Broadcasting Union
-	\newblock Specification of the Broadcast Wave Format (BWF)
-	\newblock 2011
-
-  \end{thebibliography}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%
-%	SECTION: Conclusion
-%
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-\begin{frame}{About}
-
-This sthlm beamer theme is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.\\
-\vspace{1cm}
-If you have any questions or comments
-\begin{itemize}
-	\item Website: \cBlue{markolson.se}
-	\item Twitter: \cBlue{@markolsonse}
-	\item Instagram: \cBlue{@markolson.se}
-\end{itemize}
-\end{frame}
-
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-%	FRAME:
-%-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 \begingroup
 \setbeamercolor{background canvas}{bg=\cnDarkGrey}
 \begin{frame}[plain]
 
-\centering{\cGrey{\Huge{THE \newline END}}}
+\centering{
+	\cGrey{\Huge{THE \newline END}}
+}
 
 \end{frame}
 \endgroup
